--- a/week1/index.html
+++ b/week1/index.html
@@ -1,13 +1,8 @@
-<html>
-    <header>
-    </header>
-    <body>
-        <h1>
-            this is a heading
-
-        </h1>
-        <p>
-            this is a paragraph
-        </p>
-    </body>
+<!DOCTYPE html> 
+<html lang="en"> 
+<body> 
+<h2>About Us</h2> 
+<p>Welcome to our website. We are committed to delivering high-quality web 
+experiences using modern frameworks and tools.</p> 
+</body> 
 </html>
