--- a/week1/index.html
+++ b/week1/index.html
@@ -4,10 +4,10 @@
     <body>
         <h1>
             this is a heading
-
+           
         </h1>
         <p>
-            this is a paragraph
+            this is a paragraph modded
         </p>
     </body>
 </html>
