--- a/week1/index.html
+++ b/week1/index.html
@@ -7,7 +7,7 @@
            
         </h1>
         <p>
-            this is a paragraph modded
+            this is a paragraph modded new
         </p>
     </body>
 </html>
