--- a/week1/index.html
+++ b/week1/index.html
@@ -1,13 +1,17 @@
-<html>
-    <header>
-    </header>
-    <body>
-        <h1>
-            this is a heading
-           
-        </h1>
-        <p>
-            this is a paragraph modded new
-        </p>
-    </body>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+<title>Responsive Web Page</title> 
+<link rel="stylesheet" href="style.css"> 
+</head> 
+<body> 
+<header> 
+<h1>Welcome to My Responsive Page</h1> 
+</header> 
+<section class="about"> 
+<img src="kluh.png"> 
+<p>This page includes a responsive image and adjusts layout using CSS media 
+queries.</p> 
+  </section> 
+</body> 
 </html>
