completed all weeks

--- a/week4/homepage.html
+++ b/week4/homepage.html
@@ -5,7 +5,7 @@
 cellspacing="4"> 
 <tr> 
 <th colspan="5" height="100"> 
-<img src="kluh.png" height="100"  
+<img src="klu.jpg" height="100"  
 width="100" align="left" align="middle" > 
 &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
 <h1>Welcome to online product store</h1>  
@@ -19,6 +19,7 @@ width="100" align="left" align="middle" >
 <th><a href="loginpage.html" target="empty"> 
                          Login</a></th> 
 <th><a href="contact.html" target="empty">contact</a></th> 
+<th><a href="about me.html" target="empty">aboutme</a></th>
 </tr> 
 </table> 
 </body> 
