--- a/week4/registration.html
+++ b/week4/registration.html
@@ -4,25 +4,12 @@
   <title>Registration</title> 
   <script> 
     function registerUser() { 
-      const username = document.getElementById("username").value.trim(); 
-      const password = document.getElementById("password").value; 
- 
-      if (username === "" || password === "") { 
-        alert("Please enter both username and password."); 
-return false; 
-} 
-if (password.length < 6) { 
-alert("Password must be at least 6 characters."); 
-return false; 
-} 
-localStorage.setItem("username", username); 
-localStorage.setItem("password", password); 
-alert("Registration successful! Proceed to login."); 
-return true; 
+   
+alert("registration proceed to login")
 } 
 </script> 
 </head> 
-<body style="background-color: #e0f7fa; font-family: Arial;"> 
+<body style="background-color: #ffffff; font-family: Arial;"> 
 <center> 
 <h2>Register</h2> 
 <form onsubmit="return registerUser();" action="login.html"> 
